[package]
name = "rexpose"
version = "1.2.5"
edition = "2024"
description = "A reverse proxy to expose TCP and UDP services behind any NAT via a public server."
repository = "https://github.com/k4i6/rexpose"
readme = "README.md"
keywords = ["proxy", "TCP", "UDP"]
categories = ["development-tools", "network-programming", "os", "web-programming"]
license = "MIT"

[dependencies]
clap = { version = "4.5.47", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.28"
tokio = {version = "1.47.1", features = ["full"]}
tokio-native-tls = "0.3.1"
openssl = {version = "0.10.73", features = ["vendored"]}
serde = "1.0.219"
serde_cbor = "0.11.2"
rpassword = "7.4.0"

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
